// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage component interaction submitting the form should render error 1`] = `
<div>
  <div
    class="container container-full storage container"
  >
    <h4
      class="section-header"
    >
      Add Storage Device
    </h4>
    <div
      class="form-group well"
    >
      <label
        class="control-label"
      >
        Select Resource Class
      </label>
      <select
        class="form-control"
      >
        <option
          value="EMCPower,linux"
        >
          linux-EMCPower
        </option>
      </select>
    </div>
    <form
      autocomplete="off"
    >
      <div
        class="alert span4 offset4 alert-danger"
      >
        An unexpected error occured. Please update form and resubmit.
      </div>
      <div
        class="form-group"
      >
        <label
          for="size"
        >
          Size
        </label>
        <input
          class="form-control"
          id="size"
          required=""
          type="text"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="filesystem_type"
        >
          Filesystem type
        </label>
        <input
          class="form-control"
          id="filesystem_type"
          type="text"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="uuid"
        >
          Uuid
        </label>
        <input
          class="form-control"
          id="uuid"
          required=""
          type="text"
        />
      </div>
      <button
        class="btn btn-success"
        type="submit"
      >
        Save
        <i
          class="fa fa-check-circle"
        />
      </button>
    </form>
    <div
      style="margin: 25px 0px;"
    >
      <a
        href="http://localhost/configure/storage"
      >
        ← Return to storage configuration page
      </a>
    </div>
  </div>
</div>
`;

exports[`storage component interaction submitting the form should render loading 1`] = `
<div>
  <div
    class="container container-full storage container"
  >
    <h4
      class="section-header"
    >
      Add Storage Device
    </h4>
    <div
      class="form-group well"
    >
      <label
        class="control-label"
      >
        Select Resource Class
      </label>
      <select
        class="form-control"
      >
        <option
          value="EMCPower,linux"
        >
          linux-EMCPower
        </option>
      </select>
    </div>
    <form
      autocomplete="off"
    >
      
      <div
        class="form-group"
      >
        <label
          for="size"
        >
          Size
        </label>
        <input
          class="form-control"
          id="size"
          required=""
          type="text"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="filesystem_type"
        >
          Filesystem type
        </label>
        <input
          class="form-control"
          id="filesystem_type"
          type="text"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="uuid"
        >
          Uuid
        </label>
        <input
          class="form-control"
          id="uuid"
          required=""
          type="text"
        />
      </div>
      <button
        class="btn btn-success"
        disabled=""
        type="submit"
      >
        Save
        <i
          class="fa fa-spinner fa-spin"
        />
      </button>
    </form>
    <div
      style="margin: 25px 0px;"
    >
      <a
        href="http://localhost/configure/storage"
      >
        ← Return to storage configuration page
      </a>
    </div>
  </div>
</div>
`;

exports[`storage component interaction submitting the form should render success 1`] = `
<div>
  <div
    class="container container-full storage container"
  >
    <h4
      class="section-header"
    >
      Add Storage Device
    </h4>
    <div
      class="form-group well"
    >
      <label
        class="control-label"
      >
        Select Resource Class
      </label>
      <select
        class="form-control"
      >
        <option
          value="EMCPower,linux"
        >
          linux-EMCPower
        </option>
      </select>
    </div>
    <form
      autocomplete="off"
    >
      <div
        class="alert span4 offset4 alert-success"
      >
        Record Created.
      </div>
      <div
        class="form-group"
      >
        <label
          for="size"
        >
          Size
        </label>
        <input
          class="form-control"
          id="size"
          required=""
          type="text"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="filesystem_type"
        >
          Filesystem type
        </label>
        <input
          class="form-control"
          id="filesystem_type"
          type="text"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="uuid"
        >
          Uuid
        </label>
        <input
          class="form-control"
          id="uuid"
          required=""
          type="text"
        />
      </div>
      <button
        class="btn btn-success"
        type="submit"
      >
        Save
        <i
          class="fa fa-check-circle"
        />
      </button>
    </form>
    <div
      style="margin: 25px 0px;"
    >
      <a
        href="http://localhost/configure/storage"
      >
        ← Return to storage configuration page
      </a>
    </div>
  </div>
</div>
`;

exports[`storage component should render nothing with no data 1`] = `
<div>
  
</div>
`;

exports[`storage component should render with data 1`] = `
<div>
  <div
    class="container container-full storage container"
  >
    <h4
      class="section-header"
    >
      Add Storage Device
    </h4>
    <div
      class="form-group well"
    >
      <label
        class="control-label"
      >
        Select Resource Class
      </label>
      <select
        class="form-control"
      >
        <option
          value="EMCPower,linux"
        >
          linux-EMCPower
        </option>
      </select>
    </div>
    <form
      autocomplete="off"
    >
      
      <div
        class="form-group"
      >
        <label
          for="size"
        >
          Size
        </label>
        <input
          class="form-control"
          id="size"
          required=""
          type="text"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="filesystem_type"
        >
          Filesystem type
        </label>
        <input
          class="form-control"
          id="filesystem_type"
          type="text"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="uuid"
        >
          Uuid
        </label>
        <input
          class="form-control"
          id="uuid"
          required=""
          type="text"
        />
      </div>
      <button
        class="btn btn-success"
        type="submit"
      >
        Save
        <i
          class="fa fa-check-circle"
        />
      </button>
    </form>
    <div
      style="margin: 25px 0px;"
    >
      <a
        href="http://localhost/configure/storage"
      >
        ← Return to storage configuration page
      </a>
    </div>
  </div>
</div>
`;
